--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.9",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "eslint": "^8.57.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "typescript": "^4.6.3"
   },
   "private": true
