--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.18.9",
+    "react-native-reanimated": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -34,5 +35,8 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "typescript": "^4.6.3"
   },
-  "private": true
+  "private": true,
+  "overrides": {
+    "typescript": "^4.6.3"
+  }
 }
